correcting-spacing

--- a/ex_2_html_css/style.css
+++ b/ex_2_html_css/style.css
@@ -39,7 +39,7 @@ h2 {
 
 #footer {
     background-color: #fff;
-    padding: 50px;
-    font-size: 18px;
+    padding: 35px;
+    font-size: 16px;
     text-align: center;
 }
